# listdiffcopy

./: .gitignore  Action1.py  Action2.py  Action2CompareCopyMove.py  ActionBase.py  ActionLogger.py  BackupMediumWebsite.py  LICENSE  Logger.py  LoggerObj.py  ObjectWithLogger.py  ObjectWithLogger2.py  README.md  ScrappingMediumPage.py  SomeAction.py  SomeAction1.py  SomeAction2.py  SomeActionLogger.py  StorageAction2.py  StorageBase.py  StorageGitHub.py  StorageLocal.py  StoragePCloud.py  StorageSFTP.py  StorageWeb.py  StorageWebMedium.py  add_this_snippet_at_the_end_of_functions.php  dry_run.py  extras.txt  helpers.py  jpg_quality_pil_magick.py  logger2.py  logging_config.py  logging_printing.py  main.py  medium_backup.py  medium_backup_test.py  medium_one_backup.py  pyproject.toml  settings.py  (+8 more)
src/clouds_and_scraps/: StorageLocal.py  StoragePCloud.py  storage_actions.py
src/listdiffcopy/: LoggerObj.py  StorageAction2.py  StorageBase.py  StorageGCloudSQL.py  StorageGitHub.py  StorageLocal.py  StorageMySQL.py  StoragePCloud.py  StorageSFTP.py  StorageSQLgcloud.py  StorageSQLmy.py  StorageWeb.py  StorageWebMedium.py  __init__.py  logging_config.py  settings.py  storage_actions.py  utils.py
