[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "listdiffcopy"
version = "0.05551"
authors = [
  { name="Yulia V", email="yu51a5@proton.me" },
]
description = "listdiffcopy"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

keywords = ["list", "diff", "copy"]

[project.urls]
Repository = "https://github.com/yu51a5/listdiffcopy.git"
