[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "listdiffcopy"
version = "0.055598"
authors = [
  { name="Yulia V", email="yu51a5@proton.me" },
]
description = "listdiffcopy"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

keywords = ["list", "diff", "copy"]
dependencies = [
    "pandas>=2.2.3",
    "paramiko>=3.5.0",
    "pillow>=11.0.0",
    "pillow-avif-plugin>=1.4.6",
    "html2text>=2024.2.26",
    "requests>=2.32.3",
    "requests-toolbelt>=1.0.0",
    "selenium>=4.26.1",
    "beautifulsoup4>=4.12.3"
]

[project.urls]
Repository = "https://github.com/yu51a5/listdiffcopy.git"
